# alphaword-blocks

./: .gitignore  Cargo.toml  DATA_SOURCES.md  README.md  check_spellable.jl
data/: blocked.txt  webster.txt  wordnet.txt
download_scripts/: README.md  download_scowl.sh  download_tatoeba.sh  download_wikipedia.sh  download_wiktionary.sh  download_words_alpha.sh  filtered_sentences.py
src/: alphabet.rs  alphabet.toml  assign.rs  filters.rs  glyph_config.rs  glyph_db.rs  hall.rs  interactive.rs  main.rs  stats.rs  types.rs  util.rs  verify.rs  verify_cmd.rs
