# AlphaWord Blocks — Cargo package manifest
# Copyright (C) 2025- Svetlin Tassev
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "alphaword-blocks"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
rayon = "1.10"
rand = "0.8"
rand_chacha = "0.3"
ahash = "0.8"
hashbrown = { version = "0.14", default-features = false, features = ["ahash"] }
smallvec = "1.13"
unicode-normalization = "0.1"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
toml = "0.9.8"
unicode-segmentation = "1.10"
strum = "0.27.2"
strum_macros = "0.27.2"

[profile.release]
opt-level = 3          # maximize optimization
lto = "fat"            # best cross-crate inlining/vectorization
codegen-units = 1      # helps inlining and autovectorization
panic = "abort"        # tiny perf win; no unwinding paths
strip = "symbols"      # doesn’t affect perf; fine to keep
incremental = false
debug = false
overflow-checks = false

# Optional: also optimize build scripts & build-deps (tiny impact on final perf)
[profile.release.build-override]
opt-level = 3
codegen-units = 1
